# JokeWare

./: .gitignore  README.md  Remove.bat  Setup.bat
client/: CMakeLists.txt  main.cpp  setup.sh  windows-toolchain.cmake
server/: CMakeLists.txt  main.cpp  setup.sh  windows-toolchain.cmake
server/dependencies/curl/lib/pkgconfig/: libcurl.pc
server/dependencies/curl/share/man/man1/: curl-config.1  curl.1  mk-ca-bundle.1
server/dependencies/curl/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EARLYDATA_SENT_T.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_POSTTRANSFER_TIME_T.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  CURLINFO_PROTOCOL.3  (+461 more)
server/src/: Commands.cpp  Commands.hpp  Socket.cpp  Socket.hpp  Utils.cpp
